--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,20 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    //UT
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation 'org.mockito:mockito-core:2.13.0'
+
+    //http
+    implementation 'com.android.volley:volley:1.1.1'
+
+    //UI
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    //maps
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 }
