--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                   android:value="AIzaSyCJAPreu_p3vRrHw2gG6rtZippD6yESjZM"/>
         <activity android:name=".single_country.SingleCountryActivity">
         </activity>
         <activity android:name=".countries.CountriesActivity">
